# splat

./: README.md  pyproject.toml
examples/: try_layer.py
splat/: __init__.py  inspect_npy.py  layer.py  layer_interaction.py  segment_editor.py
tests/: test_inspect_npy.py
