[build-system]
requires = ["flit_core>=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "splat"
version = "0.1.0"
description = "Interactive tool for creating, viewing, and editting 3d microscopy segmentations."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "h5gizmos"]

[project.scripts]
inspect-npy = "splat.inspect_npy:main"

[project.optional-dependencies]
test = ["pytest"]
